# bot-ngu

./: requirements.txt
ChatPal/: README.md  announce.py  bot.py  commands.py  embedtool.py  help.py  keep_alive.py  main.py  online_tracker.py  pyproject.toml  replit.md
ChatPal/attached_assets/: Pasted--bot-command-async-def-noiquy-ctx-embed-discord-Embed-title--1754657026115_1754657026116.txt
